--- a/templates/main_options.erb
+++ b/templates/main_options.erb
@@ -1,5 +1,3 @@
 # File is managed by Puppet
 
----
-<% options = scope.lookupvar('oxidized::main::merged_options') -%>
-<%= options.to_yaml.gsub(/^\s{2}/, '') %>
+<%= scope.lookupvar('oxidized::main::merged_options').to_yaml -%>
